Meep 0.20

  * Support for user-specified permeability (mu).  Renamed "dielectric"
    to "medium" in libctl interface, new "mu" property and new
    output-b and output-mu functions, and new "Permeability" and "Bx" etc.
    field types.

  * Support for user-specified electric and/or magnetic conductivities.

  * New PML implementation (UPML instead of split-field), should
    have lower reflection in many cases.

  * User-specified PML profile and asymptotic reflection.

  * Internally, all timestepping code is now handwritten (and much shorter)
    rather than old verbose Haskell-generated code; this should make
    it easier to add new features.

  * Add support for non-integrated current sources, if the is-integrated?
    property of the current is set to false.

  * Work with HDF5 1.8 (which previously would not compile unless you
    manually set a preprocessor flag, due to API changes).

  * Bug fix: fixed relative phase of E and H sources (which were off
    from one another by half a timestep); thanks to M. Megens for bug report.

  * Bug fix: make sure h5 filenames have unique timestep for cases where
    dt is very small or very large.

  * Bug fix: check for ctl.h in /usr/include/ctl, the default in Fedora.

Meep 0.10.1 (13 Nov. 2007)

  * Bug fix in flux_in_box, which accidentally returned the flux
    multiplied by the number of processors, instead of the flux.

  * Bug fix in epsilon averaging for structures including metals
    (epsilon < 0), fixing an instability.

  * Bug fix in output-png when running in parallel (removing race condition).

  * Fixed bug that disabled subpixel averaging for dimensions=1 (thanks
    to Mischa Megens for the bug report).

  * Fixed bug that caused output-tot-pwr to stop Meep with an error message;
    thanks to Vyacheslav Sokolov for the bug report.

  * Make "at-every" step functions less susceptible to rounding errors;
    thanks to L. Le Guyader for the bug report.
